--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- fancy box  -->
   <link rel="stylesheet" href="../WEBSITE/jquery.fancybox.min.css">
   <!-- custom css  -->
-  <link rel="stylesheet" href="style.css">  
+<link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="../WEBSITE/style projects.css">
   <link rel="stylesheet" href="../WEBSITE/style product.css">
   <link rel="stylesheet" href="../WEBSITE/responsive.css">
