--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
   <link rel="shortcut icon" href="assets/images/BERANDA/TKA LOGO.png" type="image/svg+xml">
 
   <!-- BOOTSTRAP CSS  -->
-  <link rel="stylesheet" href="../WEBSITE/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/bootstrap.min.css">
   <!-- SWIPER SLIDER CSS-->
-  <link rel="stylesheet" href="../WEBSITE/swiper-bundle.min.css">
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/swiper-bundle.min.css">
 
   <!-- fancy box  -->
-  <link rel="stylesheet" href="../WEBSITE/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/jquery.fancybox.min.css">
   <!-- custom css  -->
-<link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="../WEBSITE/style projects.css">
-  <link rel="stylesheet" href="../WEBSITE/style product.css">
-  <link rel="stylesheet" href="../WEBSITE/responsive.css">
+
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/style.css">  
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/style projects.css">
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/style product.css">
+  <link rel="stylesheet" type="text/css" href="../WEBSITE/responsive.css">
 
 </head> 
 
