--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <link rel="shortcut icon" href="assets/images/BERANDA/TKA LOGO.png" type="image/svg+xml">
 
   <!-- BOOTSTRAP CSS  -->
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   <!-- SWIPER SLIDER CSS-->
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/swiper-bundle.min.css">
+  <link rel="stylesheet" type="text/css" href="swiper-bundle.min.css">
 
   <!-- fancy box  -->
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
   <!-- custom css  -->
 
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/style.css">  
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/style projects.css">
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/style product.css">
-  <link rel="stylesheet" type="text/css" href="../WEBSITE/responsive.css">
+  <link rel="stylesheet" type="text/css" href="style.css">  
+  <link rel="stylesheet" type="text/css" href="style projects.css">
+  <link rel="stylesheet" type="text/css" href="style product.css">
+  <link rel="stylesheet" type="text/css" href="responsive.css">
 
 </head> 
 
@@ -974,17 +974,19 @@ Permata Regency  blok EE no. 7          </address>
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
+
+  <script src="script.js"></script>
 
 
   <!-- PROJECT SLIDER -->
-  <script src="./assets/js/scriptt.js"></script>
+  <script src="scriptt.js"></script>
 
   <!-- NAVBAR -->
-  <!-- <script src="./assets/js/scripttt.js"></script> -->
+  <!-- <script src="scripttt.js"></script> -->
 
   <!-- PRODUCT -->
-  <script src="./assets/js/script product.js"></script>
+  <script src="script product.js"></script>
 
   <!-- FTCO ANIMATE -->
   <!-- <script src="main.js"></script> -->
@@ -1002,38 +1004,38 @@ Permata Regency  blok EE no. 7          </address>
 
 
   <!-- jquery  -->
-  <script src="../WEBSITE/jquery-3.5.1.min.js"></script>
+  <script src="jquery-3.5.1.min.js"></script>
   <!-- bootstrap -->
-  <script src="../WEBSITE/bootstrap.min.js"></script>
-  <script src="../WEBSITE/popper.min.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="popper.min.js"></script>
 
   <!-- fontawesome  -->
-  <script src="../WEBSITE/font-awesome.min.js"></script>
+  <script src="font-awesome.min.js"></script>
 
   <!-- swiper slider  -->
-  <script src="../WEBSITE/swiper-bundle.min.js"></script>
+  <script src="swiper-bundle.min.js"></script>
 
   <!-- mixitup -- filter  -->
-  <script src="../WEBSITE/jquery.mixitup.min.js"></script>
+  <script src="jquery.mixitup.min.js"></script>
 
   <!-- fancy box  -->
-  <script src="../WEBSITE/jquery.fancybox.min.js"></script>
+  <script src="jquery.fancybox.min.js"></script>
 
   <!-- parallax  -->
-  <script src="../WEBSITE/parallax.min.js"></script>
+  <script src="parallax.min.js"></script>
 
   <!-- gsap  -->
-  <script src="../WEBSITE/gsap.min.js"></script>
+  <script src="gsap.min.js"></script>
 
   <!-- scroll trigger  -->
-  <script src="../WEBSITE/ScrollTrigger.min.js"></script>
+  <script src="ScrollTrigger.min.js"></script>
   <!-- scroll to plugin  -->
-  <script src="../WEBSITE/ScrollToPlugin.min.js"></script>
+  <script src="ScrollToPlugin.min.js"></script>
   <!-- rellax  -->
-  <!-- <script src="../WEBSITE/rellax.min.js"></script> -->
-  <!-- <script src="../WEBSITE/rellax-custom.js"></script> -->
+  <!-- <script src="rellax.min.js"></script> -->
+  <!-- <script src="rellax-custom.js"></script> -->
   <!-- smooth scroll  -->
-  <script src="../WEBSITE/smooth-scroll.js"></script>
+  <script src="smooth-scroll.js"></script>
 
   <script src="Dependencies/jquery.min.js"></script>
   <script src="Dependencies/jquery.easing.min.js"></script>
@@ -1044,7 +1046,7 @@ Permata Regency  blok EE no. 7          </address>
 
 
   <!-- custom js  -->
-  <script src="../WEBSITE/main.js"></script>
+  <script src="main.js"></script>
   <script src="main.js"></script>
 
 </body>
